# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: PythonCI.yml
page_loader/: .engine.py.swp  .make_name_and_path.py.swp  .save_mode.py.swp  .work_with_html.py.swp  __init__.py  engine.py  logger.py  make_name_and_path.py  save_mode.py  saves.py  transformation_url.py  work_with_html.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: html_with_local_links.html  ru-hexlet-io-courses.html  ru-hexlet-io-lessons.rss  test_html.html
